--- a/assets/private/styles/base/reset.less
+++ b/assets/private/styles/base/reset.less
@@ -66,6 +66,10 @@ textarea {
 /*  BOOTSTRAP
 -------------------------------------------------------------------------------*/
 
+*[class] {
+	margin-top: 0;
+	margin-bottom: 0;
+}
 h1, h2, h3, h4, h5, h6, h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, address, abbr[title], abbr[data-original-title], caption, p, blockquote, ul, ol, dl, dt, dd, pre, pre code, code, kbd, pre, samp, legend {
 	background-color: transparent;
 	border: none;
