--- a/assets/private/styles/base/mixins.less
+++ b/assets/private/styles/base/mixins.less
@@ -2,28 +2,176 @@
     MIXINS
 \*=============================================================================*/
 
-.clearfix() {
-	&:after {
-		display: table;
-		content: '';
-		clear: both;
-	}
+/*  SHAPES - http://fahad19.github.io/shape.less/
+-------------------------------------------------------------------------------*/
+
+.shape-circle(@width) {
+	.shape-square(@width);
+	border-radius: 50px;
 }
-.text-hidden() {
-	text-indent: -5000px;
-	overflow: hidden;
+.shape-oval(@width, @height) {
+
+	.shape-rectangle(@width, @height);
+	border-radius: 50%;
 }
-.text-truncate() {
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
+.shape-rectangle(@width, @height) {
+	width: @width;
+	height: @height;
 }
-.momentum-scrolling() {
-	overflow: auto;
-	-webkit-overflow-scrolling: touch;
+.shape-square(@width) {
+	.shape-rectangle(@width, @width);
 }
-.vertically-centered(@position: relative) {
-	top: 50%;
-	transform: translateY(-50%);
-	position: @position;
+.shape-triangle-up(@width, @color) {
+	.shape-square(0);
+	border-left: @width/2 solid transparent;
+	border-right: @width/2 solid transparent;
+	border-bottom: @width solid @color;
 }
+.shape-triangle-down(@width, @color) {
+	.shape-square(0);
+	border-left: @width/2 solid transparent;
+	border-right: @width/2 solid transparent;
+	border-top: @width solid @color;
+}
+.shape-triangle-left(@width, @color) {
+	.shape-square(0);
+	border-top: @width/2 solid transparent;
+	border-right: @width solid @color;
+	border-bottom: @width/2 solid transparent;
+}
+.shape-triangle-right(@width, @color) {
+	.shape-square(0);
+	border-top: @width/2 solid transparent;
+	border-left: @width solid @color;
+	border-bottom: @width/2 solid transparent;
+}
+.shape-triangle-top-left(@width, @color) {
+	.shape-square(0);
+	border-top: @width solid @color;
+	border-right: @width solid transparent;
+}
+.shape-triangle-top-right(@width, @color) {
+	.shape-square(0);
+	border-top: @width solid @color;
+	border-left: @width solid transparent;
+}
+.shape-triangle-bottom-left(@width, @color) {
+	.shape-square(0);
+	border-bottom: @width solid @color;
+	border-right: @width solid transparent;
+}
+.shape-triangle-bottom-right(@width, @color) {
+	.shape-square(0);
+	border-bottom: @width solid @color;
+	border-left: @width solid transparent;
+}
+/*  BOOTSTRAP
+-------------------------------------------------------------------------------*/
+
+/*
+.alert-variant(@background; @border; @text-color)
+.animation(@animation)
+.animation-delay(@delay)
+.animation-direction(@direction)
+.animation-duration(@duration)
+.animation-fill-mode(@fill-mode)
+.animation-iteration-count(@iteration-count)
+.animation-name(@name)
+.animation-timing-function(@timing-function)
+.backface-visibility(@visibility)
+.bg-variant(@color)
+.border-bottom-radius(@radius)
+.border-left-radius(@radius)
+.border-right-radius(@radius)
+.border-top-radius(@radius)
+.box-shadow(@shadow)
+.box-sizing(@boxmodel)
+.button-size(@padding-vertical; @padding-horizontal; @font-size; @line-height; @border-radius)
+.button-variant(@color; @background; @border)
+.calc-grid-column(@index, @class, @type) when (@type = offset)
+.calc-grid-column(@index, @class, @type) when (@type = pull) and (@index = 0)
+.calc-grid-column(@index, @class, @type) when (@type = pull) and (@index > 0)
+.calc-grid-column(@index, @class, @type) when (@type = push) and (@index = 0)
+.calc-grid-column(@index, @class, @type) when (@type = push) and (@index > 0)
+.calc-grid-column(@index, @class, @type) when (@type = width) and (@index > 0)
+.center-block()
+.clearfix()
+.container-fixed(@gutter: @grid-gutter-width)
+.content-columns(@column-count; @column-gap: @grid-gutter-width)
+.float-grid-columns(@class)
+.form-control-focus(@color: @input-border-focus)
+.form-control-validation(@text-color: #555; @border-color: #ccc; @background-color: #f5f5f5)
+#gradient {
+	.directional(@start-color: #555; @end-color: #333; @deg: 45deg)
+	.horizontal(@start-color: #555; @end-color: #333; @start-percent: 0%; @end-percent: 100%)
+	.horizontal-three-colors(@start-color: #00b3ee; @mid-color: #7a43b6; @color-stop: 50%; @end-color: #c3325f)
+	.radial(@inner-color: #555; @outer-color: #333)
+	.striped(@color: rgba(255,255,255,.15); @angle: 45deg)
+	.vertical(@start-color: #555; @end-color: #333; @start-percent: 0%; @end-percent: 100%)
+	.vertical-three-colors(@start-color: #00b3ee; @mid-color: #7a43b6; @color-stop: 50%; @end-color: #c3325f)
+}
+.hyphens(@mode: auto)
+.img-responsive(@display: block)
+.img-retina(@file-1x; @file-2x; @width-1x; @height-1x)
+.input-size(@input-height; @padding-vertical; @padding-horizontal; @font-size; @line-height; @border-radius)
+.label-variant(@color)
+.list-group-item-variant(@state; @background; @color)
+.loop-grid-columns(@index, @class, @type) when (@index >= 0)
+.make-grid(@class)
+.make-grid-columns()
+.make-lg-column(@columns; @gutter: @grid-gutter-width)
+.make-lg-column-offset(@columns)
+.make-lg-column-pull(@columns)
+.make-lg-column-push(@columns)
+.make-md-column(@columns; @gutter: @grid-gutter-width)
+.make-md-column-offset(@columns)
+.make-md-column-pull(@columns)
+.make-md-column-push(@columns)
+.make-row(@gutter: @grid-gutter-width)
+.make-sm-column(@columns; @gutter: @grid-gutter-width)
+.make-sm-column-offset(@columns)
+.make-sm-column-pull(@columns)
+.make-sm-column-push(@columns)
+.make-xs-column(@columns; @gutter: @grid-gutter-width)
+.make-xs-column-offset(@columns)
+.make-xs-column-pull(@columns)
+.make-xs-column-push(@columns)
+.nav-divider(@color: #e5e5e5)
+.navbar-vertical-align(@element-height)
+.opacity(@opacity)
+.pagination-size(@padding-vertical; @padding-horizontal; @font-size; @line-height; @border-radius)
+.panel-variant(@border; @heading-text-color; @heading-bg-color; @heading-border)
+.perspective(@perspective)
+.perspective-origin(@perspective)
+.placeholder(@color: @input-color-placeholder)
+.progress-bar-variant(@color)
+.reset-filter()
+.reset-text()
+.resizable(@direction)
+.responsive-visibility()
+.rotate(@degrees)
+.rotateX(@degrees)
+.rotateY(@degrees)
+.scale(@ratio)
+.scale(@ratioX; @ratioY)
+.scaleX(@ratio)
+.scaleY(@ratio)
+.size(@width; @height)
+.skew(@x; @y)
+.square(@size)
+.tab-focus()
+.table-row-variant(@state; @background)
+.text-emphasis-variant(@color)
+.text-hide()
+.text-overflow()
+.transform-origin(@origin)
+.transition(@transition)
+.transition-delay(@transition-delay)
+.transition-duration(@transition-duration)
+.transition-property(@transition-property)
+.transition-timing-function(@timing-function)
+.transition-transform(@transition)
+.translate(@x; @y)
+.translate3d(@x; @y; @z)
+.user-select(@select)
+*/
